--- a/lab0.5/lab0.5-3/lab0.5_3_1_layout.html
+++ b/lab0.5/lab0.5-3/lab0.5_3_1_layout.html
@@ -161,11 +161,11 @@
 <p>关于这个地址的选择，其实有软件工的工作，也有硬件人的工作。</p>
 <blockquote>
 <div><p><strong>实现细节</strong></p>
-<p>需要解释一下的是，0x80000000这个地址，是QEMU模拟的这款riscv处理器的<strong>复位地址</strong></p>
+<p>需要解释一下的是，QEMU模拟的这款riscv处理器的<strong>复位地址</strong>是0x1000，而不是0x80000000</p>
 <p>所谓<strong>复位地址</strong>，指的是CPU在上电的时候，或者按下复位键的时候，PC被赋的初始值</p>
 <p>这个值的选择会因为厂商的不同而发生变化，例如，80386的复位地址是0xFFF0（因为复位时是16位模式，写成32位时也作0xFFFFFFF0），MIPS的复位地址是0x00000000</p>
-<p>RISCV的设计标准相对灵活，它允许芯片的实现者自主选择复位地址，因此不同的芯片会有一些差异。QEMU是选择了一种实现方式进行模拟</p>
-<p>它假设在0x80000000的位置上有一块rom，并且其中存放了OpenSBI.bin的内容，然后在CPU完成上电后，将虚拟的PC指针置于这个地址上。</p>
+<p>RISCV的设计标准相对灵活，它允许芯片的实现者自主选择复位地址，因此不同的芯片会有一些差异。QEMU-4.1.1是选择了一种实现方式进行模拟</p>
+<p>在QEMU模拟的这款riscv处理器中，将复位向量地址初始化为0x1000，再将PC初始化为该复位地址，因此处理器将从此处开始执行复位代码，复位代码主要是将计算机系统的各个组件（包括处理器、内存、设备等）置于初始状态，并且会启动Bootloader，在这里QEMU的复位代码指定加载Bootloader的位置为0x80000000，Bootloader将加载操作系统内核并启动操作系统的执行。</p>
 </div></blockquote>
 <p>我们可以想象这样的过程：操作系统的二进制可执行文件被OpenSBI加载到内存中，然后OpenSBI会把CPU的”当前指令指针”(pc, program counter)跳转到内存里的一个位置，开始执行内存中那个位置的指令。</p>
 <p>OpenSBI怎样知道把操作系统加载到内存的什么位置？总不能随便选个位置。也许你会觉得可以把操作系统的代码总是加载到固定的位置，比如总是加载到内存地址最高的地方。</p>
